// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cli help option should print help page 1`] = `
"Usage: 30s [options] [command]

Options:
  -V, --version               output the version number
  -h, --help                  output usage information

Commands:
  r|random [options]          view random snippet
  s|search [options] [query]  fuzzy search snippets by id
  t|tag [options] [id]        view snippets by tag
  v|view [options] [id]       view snippet with id
  * [id]                      view snippet with id

Examples:
  30s head
  30s v head
  30s view head

  30s r
  30s random

  30s s -j flatten
  30s search --json flatten

  30s t -l ic array
  30s tag --layout ic array"
`;

exports[`Cli help option should print help page 2`] = `
"Usage: 30s [options] [command]

Options:
  -V, --version               output the version number
  -h, --help                  output usage information

Commands:
  r|random [options]          view random snippet
  s|search [options] [query]  fuzzy search snippets by id
  t|tag [options] [id]        view snippets by tag
  v|view [options] [id]       view snippet with id
  * [id]                      view snippet with id

Examples:
  30s head
  30s v head
  30s view head

  30s r
  30s random

  30s s -j flatten
  30s search --json flatten

  30s t -l ic array
  30s tag --layout ic array"
`;

exports[`Cli help option should print help page for random command 1`] = `
"Usage: 30s r|random [options]

view random snippet

Options:
  -c, --cp               copy code to clipboard (default: false)
  -j, --json             output in json format (default: false)
  -l, --layout <layout>  print in specified layout (default: \\"itced\\")
  -h, --help             output usage information"
`;

exports[`Cli help option should print help page for random command 2`] = `
"Usage: 30s r|random [options]

view random snippet

Options:
  -c, --cp               copy code to clipboard (default: false)
  -j, --json             output in json format (default: false)
  -l, --layout <layout>  print in specified layout (default: \\"itced\\")
  -h, --help             output usage information"
`;

exports[`Cli help option should print help page for search command 1`] = `
"Usage: 30s s|search [options] [query]

fuzzy search snippets by id

Options:
  -c, --cp               copy code to clipboard (default: false)
  -j, --json             output in json format (default: false)
  -l, --layout <layout>  print in specified layout (default: \\"itced\\")
  -h, --help             output usage information"
`;

exports[`Cli help option should print help page for search command 2`] = `
"Usage: 30s s|search [options] [query]

fuzzy search snippets by id

Options:
  -c, --cp               copy code to clipboard (default: false)
  -j, --json             output in json format (default: false)
  -l, --layout <layout>  print in specified layout (default: \\"itced\\")
  -h, --help             output usage information"
`;

exports[`Cli help option should print help page for tag command 1`] = `
"Usage: 30s t|tag [options] [id]

view snippets by tag

Options:
  -c, --cp               copy code to clipboard (default: false)
  -j, --json             output in json format (default: false)
  -l, --layout <layout>  print in specified layout (default: \\"itced\\")
  -h, --help             output usage information"
`;

exports[`Cli help option should print help page for tag command 2`] = `
"Usage: 30s t|tag [options] [id]

view snippets by tag

Options:
  -c, --cp               copy code to clipboard (default: false)
  -j, --json             output in json format (default: false)
  -l, --layout <layout>  print in specified layout (default: \\"itced\\")
  -h, --help             output usage information"
`;

exports[`Cli help option should print help page for view command 1`] = `
"Usage: 30s v|view [options] [id]

view snippet with id

Options:
  -c, --cp               copy code to clipboard (default: false)
  -j, --json             output in json format (default: false)
  -l, --layout <layout>  print in specified layout (default: \\"itced\\")
  -h, --help             output usage information"
`;

exports[`Cli help option should print help page for view command 2`] = `
"Usage: 30s v|view [options] [id]

view snippet with id

Options:
  -c, --cp               copy code to clipboard (default: false)
  -j, --json             output in json format (default: false)
  -l, --layout <layout>  print in specified layout (default: \\"itced\\")
  -h, --help             output usage information"
`;
